# common-pyservice

./: foo.py  pyproject.toml  requirements.txt  setup.py
common/pys/: authentication.py  context.py  exec.py  flask_setup.py  logging.py  schema_json.py
common/pys/auth/: cognito.py
common/pys/diplomats/: cloudwatch_metrics.py  log.py  requests.py  time.py
common/pys/mock/: mock_authentication.py  mock_exec.py  mock_setup.py
common/pys/s3/: access.py
common/pys/test/: test_authentication.py  test_exec.py  test_setup.py
common_pyservice/: authentication.py
test/common/pys/: test_schema_json.py
test/common/pys/auth/: test_cognito.py
test/common/pys/diplomats/: test_cloudwatch_metrics.py  test_time.py
