[project]
name = "common-pyservice"
description = "Common functionality for python services"
maintainers = [{name = "Michael", email = "i7c@posteo.de"}]
requires-python = ">=3.9"
dependencies = [
             "cryptography==41.0.5",
             "boto3==1.28.74",
             "flask-cors==4.0.0",
             "flask==3.0.0",
             "pyjwt==2.8.0"
             ]

version = "2023.09.11"
