[project]
name = "common-pyservice"
description = "Common code for python microservices based on Flask"
maintainers = [{name = "Constantin Michael Weisser", email = "cmw@weisser-se.com"}]
requires-python = ">=3.9"
dependencies = [
             'aws-lambda-wsgi==0.0.6',
             'cryptography==42.0.2',
             'flask-cors==4.0.0',
             'flask==3.0.1',
             'json-logging==1.3.0',
             'pyjwt==2.8.0',
             'requests==2.31.0',
             'schema==0.7.5',
             ]

version = "2024.2.5.2"
